--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <p>paragraf pierwszy</p>
-     <p>paragraf drugi</p>
+    <p>paragraf drugi</p>
     <p>paragra trzeci</p>
-
+    <p>paragraf czwarty</p>
   
 
 </body>
