dodano paragrafy // alfa-version

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <p>paragraf pierwszy</p>
     <p>paragraf drugi</p>
+    <p>paragraf piąty</p>
+    <p>paragraf szósty</p>
 </body>
 </html>
